[package]
name = "confuse"
version = "0.1.0"
authors = ["ash lea <ashlea@protonmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33"
env_logger = "0.6"
fuse_mt = "0.5"
inotify = "0.7"
libc = "0.2"
log = "0.4"
nix = "0.14"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_yaml = "0.8"
time = "0.1"
